--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
     runtimeOnly 'org.postgresql:postgresql:42.6.0'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 }
 
 group = 'org.example'
@@ -40,6 +42,10 @@ ssh.settings {
     knownHosts = allowAnyHosts
 }
 
+//TODO: test native2ascii history diff report + functional tests(15)
+
+
+// task scp
 tasks.register('scp') {
     group = 'Deployment'
     description = 'Deploys JAR via SCP'
@@ -75,6 +81,7 @@ tasks.register('testTask') {
     }
 }
 
+// task compile
 tasks.register('myCompile', JavaCompile) {
     group = 'Build'
     description = 'Аналог compileJava, но с другим выходным каталогом'
@@ -89,6 +96,7 @@ tasks.register('myCompile', JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
+// task music
 tasks.register('music') {
     notCompatibleWithConfigurationCache("")
     dependsOn build
@@ -163,6 +171,7 @@ tasks.register('packageJavadoc', Zip) {
     from tasks.named('javadoc')
 }
 
+// task doc
 tasks.register('doc') {
     group = 'Documentation'
     description = 'Полный процесс генерации документации'
@@ -192,6 +201,7 @@ tasks.named('javadoc', Javadoc) {
     exclude '**/internal/**'
 }
 
+// task xml
 tasks.register('xml') {
     group = 'Verification'
     description = 'Validates all XML files in the project'
@@ -221,6 +231,7 @@ tasks.register('xml') {
     }
 }
 
+// task build
 tasks.register('buildCustom', Jar) {
     group = 'Build'
     description = 'Создание исполняемого JAR'
@@ -248,6 +259,7 @@ tasks.register('myBuild') {
     dependsOn tasks.named('buildCustom')
 }
 
+// task clean
 tasks.register('myClean') {
     group = 'Build'
     description = 'Удаляет все скомпилированные классы и временные файлы'
@@ -274,6 +286,7 @@ tasks.register('myClean') {
     }
 }
 
+// task alt
 tasks.register('alt') {
     group = 'Build'
     description = 'Создаёт альтернативную версию программы с заменами и упаковкой в JAR'
@@ -360,6 +373,7 @@ tasks.register('alt') {
     }
 }
 
+// task team
 tasks.register('team') {
     group = 'Build'
     description = 'Собирает два предыдущих коммита и архивирует их артефакты'
@@ -427,5 +441,6 @@ tasks.register('team') {
         println "✅ ZIP-файл создан: ${outputZip.absolutePath}"
     }
 }
+
 
 
